добавим файл хедер лесс1

--- a/less/layout/header.less
+++ b/less/layout/header.less
@@ -1,12 +1,11 @@
- .page__header {
-      position: relative;
-    top: 0;
-    z-index: 1000;
-    width: 100%;
-    padding: 20px 0;
-    color: #fff;
-    background-color: rgba(0,0,0,.2);
-    
+.page__header {
+  position: relative;
+  top: 0;
+  z-index: 1000;
+  width: 100%;
+  positionadding: 20px 0;
+  color: #fff;
+  background-color: rgba(0,0,0,.2);
 }
 
 
@@ -17,10 +16,9 @@
   margin: 0 auto;
  }
 .header-logo {
-	float: left;
-	width: 74px;
+  float: left;
+  width: 74px;
   height: 24px;
   fill: #ffffff;
-
 }
 
