--- a/less/layout/header.less
+++ b/less/layout/header.less
@@ -1,24 +1,21 @@
 .page__header {
-  position: relative;
-  top: 0;
-  z-index: 1000;
-  width: 100%;
-  positionadding: 20px 0;
-  color: #fff;
-  background-color: rgba(0,0,0,.2);
+	position: relative;
+	top: 0;
+	z-index: 1000;
+	width: 100%;
+	padding: 20px 0;
+	color: #fff;
+	background-color: rgba(0,0,0,.2);
 }
 
 
  .header-section {
-  display: flex;
-  justify-content: space-between;
-  width: 87.5%;
-  margin: 0 auto;
+
  }
 .header-logo {
-  float: left;
-  width: 74px;
-  height: 24px;
-  fill: #ffffff;
+	float: left;
+	width: 74px;
+	height: 24px;
+	fill: #ffffff;
 }
 
