--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,22 @@
+
+/* external*/
+
+@import "layout/external/normalize.less";
+
+/* grid*/
+
 @import "layout/grid/section.less";
-@immort "layout/grid/header/main-nav.less";
+
+/* header*/
+
+@import "layout/header/main-nav.less";
+@import "layout/header/header-logo.less";
+
+/* fonts*/
+
+@import "layout/fonts/fonts.less";
+
+/* mixins*/
+
+@import "mixins/mixins.less";
 
