--- a/less/layout/grid/section.less
+++ b/less/layout/grid/section.less
@@ -2,12 +2,14 @@
 	width: 100%;
 	min-width: 320px;
 	background-color: #999;
+	display: flex;
+	justify-content: center;
 
 
 	&__inner {
 		width: 320px;
-		margin-left: auto;
-		margin-right: auto;
+		/*margin-left: auto;*/
+		/*margin-right: auto;*/
 		background-color: #333;
 	}
 }
