--- a/less/style.less
+++ b/less/style.less
@@ -11,6 +11,7 @@
 
 @import "layout/header/main-nav.less";
 @import "layout/header/header-logo.less";
+@import "layout/header/header-section.less";
 
 /* fonts*/
 
@@ -24,6 +25,12 @@
 /* uikit */
 
 @import "less/layout/uikit/likes.less";
+@import "less/layout/uikit/form-section.less";
+@import "less/layout/uikit/checkbox.less";
+@import "less/layout/uikit/textline.less";
+@import "less/layout/uikit/radio.less";
+@import "less/layout/uikit/form-modal.less";
+
 
 
 
