--- a/less/layout/header/main-nav.less
+++ b/less/layout/header/main-nav.less
@@ -27,4 +27,53 @@
 		padding-top: 15px;
 		padding-bottom: 15px;
 	}
+
+
+	&__burger {
+		position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+
+  display: block;
+  width: 70px;
+  height: 50px;
+
+  font-size: 0;
+
+  
+  cursor: pointer;
+
+  border: none;
+  
+
+  &:before {
+  content: "";
+  position: absolute;
+  top: 15px;
+  
+
+  width: 50px;
+  height: 4px;
+
+  background-color: #ffffff;
+  box-shadow: 0 10px 0 0 #ffffff,
+              0 20px 0 0 #ffffff;
 }
+  &:hover {
+  	box-shadow: 0 10px 0 0 #d22856,
+                0 20px 0 0 #d22856;
+    content: "";
+  position: absolute;
+  top: 15px;
+  
+
+  width: 50px;
+  height: 4px;
+
+}
+
+
+  }
+}
+
