--- a/less/layout/header/header-logo.less
+++ b/less/layout/header/header-logo.less
@@ -4,4 +4,11 @@
 	width: 115px;
 	height: 69px;
 	font-size: 0;
+
+
+	/*@media @tablet {}*/
+	@media @desktop {
+		width: 150px;
+		background-image: url(../img/logo-pink-white-desktop.svg);
+	}
 }
