--- a/less/layout/uikit/textline.less
+++ b/less/layout/uikit/textline.less
@@ -1,8 +1,10 @@
 .textline {
-	position: relative;
-	width: 280px;
-	height: 63px;
-	margin-bottom: 38px;
+		position: relative;
+		width: 280px;
+		height: 63px;
+		margin-bottom: 38px;
+		padding-bottom: 15px;
+
 
 
 	&__icon {
@@ -15,6 +17,9 @@
 		font-size: 14px;
 		color: #d22856;
 		text-transform: uppercase; 
+		display: block;
+		padding-left: 23px;
+		padding-bottom: 10px;
 
 	}
 
@@ -24,6 +29,7 @@
 		height: 100%;
 		padding-top: 14.5px;
 		padding-bottom: 14.5px;
+		padding-left: 22px;
 		-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
@@ -34,6 +40,7 @@
 		font-weight: 400;
 		line-height: 30px;
 		color: #283645;
+		outline: none;
 		
 
 
