--- a/less/layout/grid/section.less
+++ b/less/layout/grid/section.less
@@ -1,7 +1,6 @@
 .section {
 	width: 100%;
 	min-width: 320px;
-	background-color: #999;
 	display: flex;
 	justify-content: center;
 
@@ -10,6 +9,15 @@
 		width: 320px;
 		/*margin-left: auto;*/
 		/*margin-right: auto;*/
-		background-color: #333;
+
+
+		@media @tablet {
+			width: 660px;
+		}
+
+
+		@media @desktop {
+			width: 960px;
+		}
 	}
 }
