--- a/less/layout/header/header-section.less
+++ b/less/layout/header/header-section.less
@@ -1,4 +1,14 @@
-.header-section__inner {
+.header-section {
 	background-color: #1d2832;
-	width: 100%;
+
+
+	&__inner {
+		width: 100%;
+
+
+		@media @desktop {
+			width: 960px;
+			/*background-color: rgba(33, 33, 33, .3);*/
+		}
+	}
 }
