--- a/less/layout/header/main-nav.less
+++ b/less/layout/header/main-nav.less
@@ -5,6 +5,7 @@
 	&__list {
 		list-style: none;
 		padding: 0;
+		margin: 0;
 	}
 
 
@@ -31,49 +32,81 @@
 
 	&__burger {
 		position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 2;
+		top: 23px;
+		right: 0;
+		z-index: 2;
 
-  display: block;
-  width: 70px;
-  height: 50px;
+		/*margin-top: -25px;*/
 
-  font-size: 0;
+		display: block;
+		width: 70px;
+		height: 50px;
 
-  
-  cursor: pointer;
+		font-size: 0;
 
-  border: none;
-  
+		cursor: pointer;
 
-  &:before {
-  content: "";
-  position: absolute;
-  top: 15px;
-  
+		border: none;
+		background: transparent url(../img/icon-menu-burger.svg) center center no-repeat;
 
-  width: 50px;
-  height: 4px;
 
-  background-color: #ffffff;
-  box-shadow: 0 10px 0 0 #ffffff,
-              0 20px 0 0 #ffffff;
+		&--cross {
+			background-image: url(../img/icon-menu-cross.svg);
+		}
+
+
+		/* &:before {
+			content: "";
+			position: absolute;
+			top: 15px;
+			
+		
+			width: 50px;
+			height: 4px;
+		
+			background-color: #ffffff;
+			box-shadow: 0 10px 0 0 #ffffff,
+			            0 20px 0 0 #ffffff;
+		}
+		
+		
+		&:hover {
+			box-shadow: 0 10px 0 0 #d22856,
+		              0 20px 0 0 #d22856;
+			content: "";
+			position: absolute;
+			top: 15px;
+		
+			width: 50px;
+			height: 4px;
+		} */
+	}
 }
-  &:hover {
-  	box-shadow: 0 10px 0 0 #d22856,
-                0 20px 0 0 #d22856;
-    content: "";
-  position: absolute;
-  top: 15px;
-  
 
-  width: 50px;
-  height: 4px;
 
+
+@media @desktop {
+	.main-nav {
+		display: inline-block;
+		background-color: transparent;
+
+
+		&__burger {
+			display: none;
+		}
+
+
+		&__item {
+			display: inline-block;
+			border: 0;
+		}
+
+
+		&__link {
+			display: inline-block;
+
+			text-transform: normal;
+			font-weight: 300;
+		}
+	}
 }
-
-
-  }
-}
-
