--- a/less/layout/header/header-section.less
+++ b/less/layout/header/header-section.less
@@ -8,7 +8,7 @@
 
 		@media @desktop {
 			width: 960px;
-			/*background-color: rgba(33, 33, 33, .3);*/
+			background-color: rgba(0,0,0,.2);
 		}
 	}
 }
