--- a/less/layout/header/main-nav.less
+++ b/less/layout/header/main-nav.less
@@ -1,17 +1,24 @@
 .main-nav {
 	background-color: #283645;
+	margin: 0 auto;
+
 
 
 	&__list {
 		list-style: none;
 		padding: 0;
 		margin: 0;
+		display: inline;
+
+
+
 	}
 
 
 	&__item {
 		border-bottom: 1px solid #000;
 		border-top: 1px solid #485461;
+		margin-right: 50px;
 	}
 
 
