--- a/less/layout/header/header-logo.less
+++ b/less/layout/header/header-logo.less
@@ -4,11 +4,14 @@
 	width: 115px;
 	height: 69px;
 	font-size: 0;
+	vertical-align: top;
 
 
 	/*@media @tablet {}*/
 	@media @desktop {
-		width: 150px;
+		width: 147px;
+		height: 40px;
+		margin-right: 100px;
 		background-image: url(../img/logo-pink-white-desktop.svg);
 	}
 }
