--- a/less/layout/header/main-nav.less
+++ b/less/layout/header/main-nav.less
@@ -12,6 +12,7 @@
 
 
 
+
 	}
 
 
@@ -96,6 +97,7 @@
 	.main-nav {
 		display: inline-block;
 		background-color: transparent;
+		vertical-align: top;
 
 
 		&__burger {
