добавим переменную мобайл

--- a/less/layout/header/header-logo.less
+++ b/less/layout/header/header-logo.less
@@ -12,6 +12,7 @@
 		width: 147px;
 		height: 40px;
 		margin-right: 100px;
+		margin-top: 17px;
 		background-image: url(../img/logo-pink-white-desktop.svg);
 	}
 }
