--- a/less/layout/header/main-nav.less
+++ b/less/layout/header/main-nav.less
@@ -98,6 +98,8 @@
 		display: inline-block;
 		background-color: transparent;
 		vertical-align: top;
+		margin-top: 15px;
+
 
 
 		&__burger {
@@ -114,7 +116,7 @@
 		&__link {
 			display: inline-block;
 
-			text-transform: normal;
+			text-transform: none;
 			font-weight: 300;
 		}
 	}
