--- a/less/mixins/adaptive.less
+++ b/less/mixins/adaptive.less
@@ -1,3 +1,4 @@
+@mobile: ~"screen and (min-width: 350px)";
 @tablet: ~"screen and (min-width: 690px)";
 @desktop: ~"screen and (min-width: 990px)";
 
