меню дескстоп правки

--- a/less/layout/header/header-section.less
+++ b/less/layout/header/header-section.less
@@ -1,9 +1,6 @@
 .header-section {
 
-
-		background-color: #1d2832;
-
-
+		
 
 		&__inner {
 		width: 100%;
@@ -13,6 +10,10 @@
 			width: 960px;
 			height: 100px;
 			background-color: rgba(0,0,0,.2);
+		}
+		@media @mobile {
+			background-color: #1d2832;
+
 		}
 	}
 }
