--- a/less/layout/header/header-section.less
+++ b/less/layout/header/header-section.less
@@ -1,19 +1,19 @@
 .header-section {
-
 		
+
 
 		&__inner {
 		width: 100%;
 
 
-		@media @desktop {
-			width: 960px;
-			height: 100px;
-			background-color: rgba(0,0,0,.2);
-		}
-		@media @mobile {
-			background-color: #1d2832;
-
+			@media @desktop {
+				width: 960px;
+				height: 100px;
+				background-color: rgba(0,0,0,.2);
+				background-color: transparent;
+			}
+			@media @mobile {
+				background-color: #1d2832;
+			}
 		}
 	}
-}
