--- a/less/layout/header/header-logo.less
+++ b/less/layout/header/header-logo.less
@@ -7,7 +7,15 @@
 	vertical-align: top;
 
 
-	/*@media @tablet {}*/
+	@media @tablet {
+		width: 147px;
+		height: 40px;
+		margin-right: 100px;
+		margin-top: 17px;
+		background-image: url(../img/logo-pink-white-tablet.svg);
+	}
+
+
 	@media @desktop {
 		width: 147px;
 		height: 40px;
