--- a/less/layout/content/page-prolog-section.less
+++ b/less/layout/content/page-prolog-section.less
@@ -1,11 +1,23 @@
 .page-prolog-section {
-	padding-top: 100px;
-	padding-bottom: 100px;
+	padding-top: 35px;
+	padding-bottom: 35px;
 
 	background-color: #fff;
+	line-height: 30px;
+	text-align: center;
 
 
 	&__inner {
 
+	}
+}
+
+@media @mobile {
+	.page-prolog-section {
+
+
+		&__inner {
+			width: 250px;
+		}
 	}
 }
