--- a/less/layout/content/page-prolog-section.less
+++ b/less/layout/content/page-prolog-section.less
@@ -21,3 +21,15 @@
 		}
 	}
 }
+
+@media @tablet {
+	.page-prolog-section {
+
+
+		&__inner {
+			width: 450px;
+			font-size: 18px;
+			line-height: 30px;
+		}
+	}
+}
