--- a/less/layout/grid/page.less
+++ b/less/layout/grid/page.less
@@ -1,7 +1,16 @@
 .page {
 	background: transparent url(../img/bg-back-mobile@1x.jpg) top center no-repeat;
 
-	
+
+	@media @tablet {
+		background-image: url(../img/bg-back-tablet@1x.jpg);
+	}
+
+
+	@media @desktop {
+		background-image: url(../img/bg-back-desktop@1x.jpg);
+	}
+
 
 	&__header {}
 	&__content {}
