--- a/less/layout/header/header-logo.less
+++ b/less/layout/header/header-logo.less
@@ -11,7 +11,9 @@
 		width: 147px;
 		height: 40px;
 		margin-right: 100px;
-		margin-top: 17px;
+		margin-left: 45px;
+		margin-top: 25px;
+		margin-bottom: 35px;
 		background-image: url(../img/logo-pink-white-tablet.svg);
 	}
 
