--- a/less/layout/header/header-section.less
+++ b/less/layout/header/header-section.less
@@ -1,5 +1,10 @@
 .header-section {
-		
+		background-color: rgba(29, 40, 50, 1);
+
+
+		@media @desktop {
+			background-color: rgba(29, 40, 50, .6);
+		}
 
 
 		&__inner {
@@ -9,11 +14,12 @@
 			@media @desktop {
 				width: 960px;
 				height: 100px;
-				background-color: rgba(0,0,0,.2);
-				background-color: transparent;
-			}
-			@media @mobile {
-				background-color: #1d2832;
 			}
 		}
 	}
+@media @tablet {
+	.header-section {
+		background-color: rgba(29, 40, 50, .6);
+			
+	}
+}
