--- a/less/layout/header/main-nav.less
+++ b/less/layout/header/main-nav.less
@@ -19,7 +19,6 @@
 	&__item {
 		border-bottom: 1px solid #000;
 		border-top: 1px solid #485461;
-		margin-right: 50px;
 	}
 
 
@@ -61,33 +60,6 @@
 		&--cross {
 			background-image: url(../img/icon-menu-cross.svg);
 		}
-
-
-		/* &:before {
-			content: "";
-			position: absolute;
-			top: 15px;
-			
-		
-			width: 50px;
-			height: 4px;
-		
-			background-color: #ffffff;
-			box-shadow: 0 10px 0 0 #ffffff,
-			            0 20px 0 0 #ffffff;
-		}
-		
-		
-		&:hover {
-			box-shadow: 0 10px 0 0 #d22856,
-		              0 20px 0 0 #d22856;
-			content: "";
-			position: absolute;
-			top: 15px;
-		
-			width: 50px;
-			height: 4px;
-		} */
 	}
 }
 
@@ -110,6 +82,8 @@
 		&__item {
 			display: inline-block;
 			border: 0;
+			padding-left: 25px;
+			padding-right: 25px;
 		}
 
 
