--- a/less/layout/uikit/checkbox.less
+++ b/less/layout/uikit/checkbox.less
@@ -1,60 +1,65 @@
 .checkbox {
-	position: relative;
+  position: relative;
 
-	margin-top: 18px;
-	margin-bottom: 18px;
-
-
-	&__icon {
-		position: absolute;
-		left: 0;
-		top: 0;
-		z-index: 2;
-
-		display: block;
-		width: 39px;
-		height: 39px;
-
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-
-		border: 2px solid #e5e5e5;
-		border-radius: 2px;
+  margin-top: 18px;
+  margin-bottom: 18px;
 
 
-		&:hover {
-			border-color: #283645;
-		}
-	}
+  &__icon {
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 2;
+
+    display: block;
+    width: 39px;
+    height: 39px;
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
+    border: 2px solid #e5e5e5;
+    border-radius: 2px;
 
 
-	&__origin {
-		display: none;
-	}
+    &:hover {
+      border-color: #283645;
+    }
+  }
 
 
-	&__label {
-		padding-top: 5px;
-		padding-bottom: 4px;
-		padding-left: 70px;
-		line-height: 30px;
-	}
+  &__origin {
+    display: none;
+  }
+
+
+  &__label {
+    position: relative;
+    z-index: 10;
+    padding-top: 5px;
+    padding-bottom: 4px;
+    padding-left: 70px;
+    line-height: 30px;
+  }
 }
 
-.checkbox__origin:checked ~ .checkbox__icon {
-	&:before {
-		position: absolute;
-		top: 12px;
-		left: 12px;
-		z-index: 5;
+.checkbox__origin:checked + .checkbox__icon {
+  &:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 5;
 
-		content: '';
+    margin-left: -11px;
+    margin-top: -8px;
 
-		display: block;
-		width: 22px;
-		height: 16px;
+    content: '';
 
-		background: url(sprite.svg) -100px -50px no-repeat;
-	}
+    display: block;
+    width: 22px;
+    height: 16px;
+
+    background: url(../img/icon-yes.svg);
+  }
 }
