--- a/less/layout/uikit/likes.less
+++ b/less/layout/uikit/likes.less
@@ -2,10 +2,20 @@
 
 }
 .likes__button {
+	display: inline-block;
+	width: 13px;
+	height: 13px;
+	background: url(../img/icon-heart.svg) no-repeat;
+	font-size: 0;
+	margin-right: 17px;
+	border:none;
+	vertical-align: middle;
+	fill: #d22856;
 
 }
 .likes__button--active{
 	color: #d22856;
+
 
 }
 .likes__scores {
